feature notification pr fixes and api update
