# src/api/swagger.json
@@ -5383,7 +5383,7 @@
         }
       }
     },
-    "/api/PartnerContacts/GetPartnerPartnerContacts": {
+    "/api/PartnerContacts": {
       "get": {
         "tags": [
           "PartnerContacts"
@@ -9804,7 +9804,9 @@
       "NotificationType": {
         "enum": [
           "CampaignMovedToWaitingState",
-          "PartnerContactRegistered"
+          "PartnerContactRegistered",
+          "CouponCountDepleted",
+          "CouponClosed"
         ],
         "type": "string"
       },
